--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "convex": "^1.27.0",
     "lucide-react": "^0.544.0",
     "next": "15.2.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shadcn-ui": "^0.9.5",
